# JUCE-Plugin-Template

./: $ eval "$(ssh-agent -s)"  $ eval "$(ssh-agent -s)".pub  .gitignore  CHANGES.md  CMakeLists.txt  CMakePresets.json  FOCUS_PERSISTENCE.md  HARDWARE_ADAPTER.md  HARDWARE_OUTPUT.md  NEW_PLUGIN_CHECKLIST.md  README.md  TEMPLATE_PHILOSOPHY.md  TWO_PARAMETER_FOCUS.md  The  UI_CORE_INTEGRATION.md  build.sh  clean_build.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
Source/hardware/: PluginHardwareAdapter.cpp  PluginHardwareAdapter.h  PluginHardwareOutputAdapter.cpp  PluginHardwareOutputAdapter.h
Source/parameters/: Parameters.cpp  Parameters.h
Source/ui/: MainView.cpp  MainView.h
docs/: ARCHITECTURE.md  CONTROL_IDS.md
plugin-template/: CMakeLists.txt  README.md
plugin-template/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin-template/Source/parameters/: Parameters.cpp
plugin-template/Source/ui/: MainView.cpp  MainView.h
ui_core/: CMakeLists.txt
ui_core/include/ui_core/: BindingRegistry.h  ControlId.h  Focus.h  FocusManager.h  HardwareAdapters.h  HardwareContract.h  ParameterBinding.h  UiCore.h
ui_core/src/: ui_core.cpp
